--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,7 @@
 <body>
 	<table>
 		<tr>
-			<td style='width: 30%;'><img src='images/newapp-icon.png'>
+			<td style='width: 30%;'><img src='images/newapp-ecv.png'>
 			</td>
 			<td>
 				<h1 id = "message"> eCloudrover</h1>
